--- a/presentation.tex
+++ b/presentation.tex
@@ -29,7 +29,35 @@
 
 \section{Arquitetura}
 
+\begin{frame}{Diagrama da arquitetura}
+    \begin{figure}[ht]
+        \begin{center}
+        \includegraphics[width=0.8\linewidth]{img/diagrama-arquitetura.png}
+        \label{fig:arquitetura}
+        \end{center}
+    \end{figure}
+\end{frame}
+
+\begin{frame}{Diagrama de tempo}
+    \begin{figure}[ht]
+        \begin{center}
+        \includegraphics[width=0.4\linewidth]{img/diagrama-tempo.png}
+        \label{fig:arquitetura}
+        \end{center}
+    \end{figure}
+\end{frame}
+
+
 \section{Projeto}
+
+\begin{frame}{Tabelas}
+    \begin{figure}[ht]
+        \begin{center}
+        \includegraphics[width=0.8\linewidth]{img/ERAero.png}
+        \label{fig:arquitetura}
+        \end{center}
+    \end{figure}
+\end{frame}
 
 \begin{frame}{METAR}
     \begin{itemize}
