--- a/presentation.tex
+++ b/presentation.tex
@@ -27,6 +27,16 @@
     \end{itemize}
 \end{frame}
 
+\begin{frame}{UI}
+    \begin{figure}[ht]
+        \begin{center}
+        \includegraphics[width=0.8\linewidth]{img/UI.png}
+        \label{fig:UI}
+        \end{center}
+    \end{figure}
+\end{frame}
+
+
 \section{Arquitetura}
 
 \begin{frame}{Diagrama da arquitetura}
