--- a/presentation.tex
+++ b/presentation.tex
@@ -70,15 +70,30 @@
 \end{frame}
 
 \begin{frame}{METAR}
-    \begin{itemize}
-        \item TODO
-    \end{itemize}
+    \centering
+    \small{\texttt{221300Z 04008KT 9000 FEW020 BKN100 30/23 Q1012}}
+    \begin{figure}[ht]
+        \begin{center}
+        \includegraphics[width=0.8\linewidth]{img/METAR-SBBE.png}
+        \label{fig:UI}
+        \end{center}
+    \end{figure}
 \end{frame}
 
 \begin{frame}{TAF}
-    \begin{itemize}
-        \item TODO
-    \end{itemize}
+    \footnotesize{\texttt{
+220859Z 2212/2312 06006KT 9999 SCT040 TX34/2217Z TN24/2309Z \\
+    BECMG 2215/2217 34013KT SCT040 FEW045TCU \\
+    TEMPO 2220/2222 TS SCT030 FEW035CB \\
+    BECMG 2222/2224 04008KT CAVOK \\
+    BECMG 2310/2312 SCT020 RMK PGX}}
+
+  \begin{figure}[ht]
+    \begin{center}
+    \includegraphics[width=0.7\linewidth]{img/TAF-SBBE.png}
+    \label{fig:UI}
+    \end{center}
+\end{figure}
 \end{frame}
 
 \begin{frame}{Histórico}
