--- a/presentation.tex
+++ b/presentation.tex
@@ -1,4 +1,6 @@
 \documentclass{beamer}
+\beamerdefaultoverlayspecification{<+->}
+\usepackage{soul}
 
 \usetheme{Berlin}
 
@@ -21,6 +23,7 @@
 
 \begin{frame}{Introdução}
     \begin{itemize}
+        \item Flight Bag
         \item Electronic Flight Bag
         \item Simulação de voo
         \item AISWEB, METAR-TAF, SIGMET
@@ -38,6 +41,39 @@
 
 
 \section{Arquitetura}
+
+\begin{frame}{Servidor}
+    \begin{figure}[ht]
+        \begin{center}
+        \includegraphics[width=0.9\linewidth]{img/oracle.png}
+        \label{fig:UI}
+        \end{center}
+    \end{figure}
+\end{frame}
+
+\begin{frame}{Arquitetura}
+    \begin{itemize}
+        \item Docker/Docker Compose
+        \item Banco: MariaDB
+        \item Backend: \st{Flask} FastAPI
+        \item Frontend: Jinja2
+        \item Observabilidade: GoAccess
+        \item Outros subdomínios
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Uso de rescursos}
+    \begin{itemize}
+        \item 500 acessos simultâneos (usando Locust)
+    \end{itemize}
+    
+    \begin{figure}[ht]
+        \begin{center}
+        \includegraphics[width=0.8\linewidth]{img/server-500-acessos.png}
+        \label{fig:arquitetura}
+        \end{center}
+    \end{figure}
+\end{frame}
 
 \begin{frame}{Diagrama da arquitetura}
     \begin{figure}[ht]
@@ -93,7 +129,7 @@
     \includegraphics[width=0.7\linewidth]{img/TAF-SBBE.png}
     \label{fig:UI}
     \end{center}
-\end{figure}
+    \end{figure}
 \end{frame}
 
 \begin{frame}{Histórico}
