--- a/presentation.tex
+++ b/presentation.tex
@@ -31,12 +31,8 @@
 \end{frame}
 
 \begin{frame}{UI}
-    \begin{figure}[ht]
-        \begin{center}
-        \includegraphics[width=0.8\linewidth]{img/UI.png}
-        \label{fig:UI}
-        \end{center}
-    \end{figure}
+    \includegraphics[width=0.7\linewidth]{img/UI.png}
+    \includegraphics[width=0.2\linewidth]{img/UI_mobile.png}  
 \end{frame}
 
 
