--- a/presentation.tex
+++ b/presentation.tex
@@ -26,15 +26,15 @@
     \begin{figure}[ht]
         \begin{minipage}[b]{0.45\linewidth}
             \centering
-            \includegraphics[width=\textwidth]{img/flight-bag.jpg}
-            \caption{Flight Bag (Wikimedia CC BY-SA 2.0)}
+            \includegraphics[width=\textwidth]{img/efb-real-original.jpg}
+            \caption{Electronic Flight Bag (David Guimarães)}
         \end{minipage}
         \hspace{0.5cm}
         \pause
         \begin{minipage}[b]{0.45\linewidth}
             \centering
             \includegraphics[width=\textwidth]{img/efb-a320.png}
-            \caption{Electronic Flight Bag {MSFS2020 / FlyByWire Simulations}}
+            \caption{Electronic Flight Bag (MSFS2020 / FlyByWire Simulations)}
         \end{minipage}
     \end{figure}
 \end{frame}
