--- a/presentation.tex
+++ b/presentation.tex
@@ -177,6 +177,24 @@
     \end{figure}
 \end{frame}
 
+\begin{frame}{Tabelas}
+    \begin{itemize}
+        \item Aeródromo: Aerodrome, City, State
+        \begin{itemize}
+            \item \small{Pistas:} Runway, PavementType
+            \pause
+            \item Frequências de comunicação: Communication, CommunicationType
+            \item Frequências de navegação: VOR, ILS, ILSCategory
+            \pause
+            \item Meteorologia: METAR, TAF
+        \end{itemize}
+    \end{itemize}
+    \pause
+    \begin{itemize}
+        \item Administração: User
+    \end{itemize}
+\end{frame}
+
 \begin{frame}{METAR}
     \centering
     \begin{itemize}
