--- a/presentation.tex
+++ b/presentation.tex
@@ -198,12 +198,9 @@
 \begin{frame}{METAR}
     \centering
     \begin{itemize}
-        \item Separação nos espaços
-        \item Regex
-        \item Lista de tuplas
-        \item Ferramenta de templating
+        \item \texttt{[0-9]\{3\}[0-9]\{2\}KT}
+        \item \texttt{Vento proa <b>\$1</b>° com velocidade <b>\$2</b> nós kt.}    
     \end{itemize}
-
     \begin{minipage}[b]{0.9\linewidth}
         \begin{columns}
             \begin{column}{0.4\textwidth}
