--- a/presentation.tex
+++ b/presentation.tex
@@ -151,20 +151,6 @@
     \end{columns}
 \end{frame}
 
-\begin{frame}{Uso de rescursos}
-    \begin{itemize}
-        \item 500 acessos simultâneos (usando Locust)
-    \end{itemize}
-    \pause
-    
-    \begin{figure}[ht]
-        \begin{center}
-        \includegraphics[width=0.8\linewidth]{img/server-500-acessos.png}
-        \label{fig:arquitetura}
-        \end{center}
-    \end{figure}
-\end{frame}
-
 
 \section{Projeto}
 
@@ -198,7 +184,7 @@
 \begin{frame}{METAR}
     \centering
     \begin{itemize}
-        \item \texttt{[0-9]\{3\}[0-9]\{2\}KT}
+        \item \texttt{([0-9]\{3\})([0-9]\{2\})KT}
         \item \texttt{Vento proa <b>\$1</b>° com velocidade <b>\$2</b> nós kt.}    
     \end{itemize}
     \begin{minipage}[b]{0.9\linewidth}
@@ -253,6 +239,20 @@
 
 
 \section{Teste de carga}
+
+\begin{frame}{Uso de rescursos}
+    \begin{itemize}
+        \item 500 acessos simultâneos (usando Locust)
+    \end{itemize}
+    \pause
+    
+    \begin{figure}[ht]
+        \begin{center}
+        \includegraphics[width=0.8\linewidth]{img/server-500-acessos.png}
+        \label{fig:arquitetura}
+        \end{center}
+    \end{figure}
+\end{frame}
 
 \begin{frame}{Sem cache}
     \begin{itemize}
